# MMCP

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  test_prompt.py
.github/workflows/: main.yml  tests.yml
app/: __init__.py
app/agent/: __init__.py  context_manager.py  context_provider_executor.py  history_manager.py  llm_interface.py  orchestrator.py  react_loop.py  schemas.py  session_manager.py
app/anp/: __init__.py  agent_integration.py  event_bus.py  models.py  notification_dispatcher.py  schemas.py  session_manager.py  watchdog.py  websocket_manager.py
app/api/: __init__.py  base.py  interfaces.py  schemas.py
app/api/routes/: chat.py  notifications.py  sessions.py  settings.py
app/core/: __init__.py  auth.py  config.py  context.py  database.py  errors.py  health.py  interfaces.py  llm.py  logger.py  plugin_interface.py  plugin_loader.py  security.py  session_manager.py  settings.json  settings_manager.py
app/core/utils/: __init__.py  pruner.py
app/plugins/: __init__.py
app/plugins/core_foundation/: __init__.py  providers.py
app/plugins/core_metadata/: __init__.py  tmdb.py
app/services/: agent.py  intelligence.py  prompt.py  transport.py  type_mapper.py
app/static/: index.html
app/static/assets/: index-0EJIvq34.js  index-B1F6OIqr.css  index-BTp7jTUx.js  index-BX36LX9l.css  index-gtFWm77V.js
baml_src/: generators.baml  main.baml
docs/: agent-loop.md  creating-a-plugin.md  devs.md  installation.md  llm-instructions.md
docs/adr/: 001-anp.md
docs/specs/: README.md  anp-v1.0.md
mmcp/: __init__.py
plugins/: foundation.py  test_hitl.py
plugins/metadata/: tmdb.py
static/: index.html
static/js/: ag-ui.js
tests/: __init__.py  conftest.py
tests/test_agent/: __init__.py  test_history_manager.py  test_orchestrator.py
tests/test_anp/: __init__.py  test_agent_integration.py  test_event_bus.py  test_lease_fencing.py  test_notification_dispatcher.py  test_watchdog.py  test_websocket_manager.py
tests/test_core/: test_config.py  test_context_providers.py  test_llm_modes.py  test_loader.py
tests/test_services/: __init__.py  test_agent_service.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  jsfe.d.ts
web/src/components/: ActionCard.tsx  ChatInput.tsx  ChatView.tsx  JsonRenderer.tsx  Layout.tsx  MarkdownRenderer.tsx  Modal.tsx  ScrollArea.tsx  Sidebar.tsx  StealthButton.tsx  StealthTooltip.tsx  TestHITLPage.tsx
web/src/lib/: chat.ts  chatController.ts  chatState.ts  historyLoader.ts  messageStore.ts  notificationManager.ts  sessionManager.ts  sessions.ts
web/src/lib/anp/: manager.ts  orchestrator.ts  types.ts
